Adjusted color scheme

--- a/index.html
+++ b/index.html
@@ -183,11 +183,12 @@
         <h2 id="projects-title">Projects</h2>
         <div class="experience-box">
             <div class="projects-tab">
-                <b>Hi, My Name is ...</b> (<a href="https://github.com/QiuhongAnnaWei/HiMyNameIs" target="_blank"
+                <b>Hi, My Name is ...</b> (<a class="projects-tab-text"
+                    href="https://github.com/QiuhongAnnaWei/HiMyNameIs" target="_blank"
                     rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
-                <li>Created a unique name generator using an RNN in a group of four for <a
+                <li>Created a unique name generator using an RNN in a group of four for <a class="projects-tab-text"
                         href="https://2021.hackatbrown.org/" target="_blank" rel="noopener noreferrer">Hack@Brown
                         2021</a></li>
                 <li>Generated names based on a given prefix, creativity level, and a similar sounding name</li>
@@ -196,8 +197,8 @@
         </div>
         <div class="experience-box">
             <div class="projects-tab">
-                <b>DeepKart64</b> (<a href="https://github.com/n-young/deepkart64" target="_blank"
-                    rel="noopener noreferrer">GitHub</a>)
+                <b>DeepKart64</b> (<a class="projects-tab-text" href="https://github.com/n-young/deepkart64"
+                    target="_blank" rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
                 <li>Created a deep reinforcement learning agent that plays Mario Kart 64 in a group of four for Deep
@@ -209,9 +210,9 @@
         </div>
         <div class="experience-box">
             <div class="projects-tab">
-                <b><a href="https://parseltongue-cs32.herokuapp.com/" target="_blank"
+                <b><a class="projects-tab-text" href="https://parseltongue-cs32.herokuapp.com/" target="_blank"
                         rel="noopener noreferrer">ParselTongue</a></b>
-                (<a href="https://github.com/kylewreyes/parseltongue" target="_blank"
+                (<a class="projects-tab-text" href="https://github.com/kylewreyes/parseltongue" target="_blank"
                     rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
@@ -225,6 +226,16 @@
                     Freemarker for the frontend and webserver</li>
             </ul>
         </div>
+    </div>
+
+    <div id="fencing" class="section-container non-title-container">
+        <h2 id="fencing-title">Fencing</h2>
+        <p class="content">Below is a highlight reel from my freshman season as a sabre fencer for Brown's fencing team.
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fINJnrGNaas" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </div>
 
 </body>
