--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
-                <li>Created a unique name generator using an RNN in a group of four for <a class="projects-tab-text"
+                <li>Created a unique name generator using an RNN in a group of four for <a
                         href="https://2021.hackatbrown.org/" target="_blank" rel="noopener noreferrer">Hack@Brown
                         2021</a></li>
                 <li>Generated names based on a given prefix, creativity level, and a similar sounding name</li>
@@ -230,12 +230,14 @@
 
     <div id="fencing" class="section-container non-title-container">
         <h2 id="fencing-title">Fencing</h2>
-        <p class="content">Below is a highlight reel from my freshman season as a sabre fencer for Brown's fencing team.
-        </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/fINJnrGNaas" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div id="fencing-info" class="content">
+            Below is a highlight reel from my freshman season as a sabre fencer for Brown's fencing team.
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/fINJnrGNaas" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </div>
 
 </body>
