Cleaned up iframe CSS

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             Below is a highlight reel from my freshman season as a sabre fencer for Brown's fencing team.
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/fINJnrGNaas" title="YouTube video player" frameborder="0"
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/fINJnrGNaas" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
