Fixed padding to be consistent

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <div id="home-bg" class="section-container">
+    <section id="home-bg" class="section-container">
         <p class="title-page" id="intro">Hi, I'm</p>
         <h1 class="title-page"><u>KYLE REYES</u></h1>
-        <div id="logo-div" class="title-page">
+        <nav id="logo-div" class="title-page">
             <a href="kyle-reyes-resume.pdf" target="_blank" rel="noopener noreferrer"><i
                     class="far fa-file-alt logos"></i></a>
             <a href="mailto:kyle_reyes@brown.edu" target="_blank" rel="noopener noreferrer"><i
@@ -25,10 +25,11 @@
                     class="fab fa-linkedin logos"></i></a>
             <a href="https://github.com/kylewreyes" target="_blank" rel="noopener noreferrer"><i
                     class="fab fa-github logos"></i></a>
-        </div>
-    </div>
+        </nav>
+        <i id="arrow-down" class="fas fa-chevron-down"></i>
+    </section>
 
-    <div id="about" class="section-container non-title-container">
+    <section id="about" class="section-container non-title-container">
         <h2 id="about-title">About Me</h2>
         <div id="about-grid">
             <div id="about-img">
@@ -48,9 +49,9 @@
                 </p>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="education" class="section-container non-title-container">
+    <section id="education" class="section-container non-title-container">
         <h2 id="education-title">Coursework</h2>
         <div id="courses">
             <div id="math-courses" class="course-container">
@@ -111,9 +112,9 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="experience" class="section-container non-title-container">
+    <section id="experience" class="section-container non-title-container">
         <h2 id="experience-title">Experience</h2>
         <div class="experience-box">
             <div class="experience-tab">
@@ -177,9 +178,9 @@
                 <li>Managed frontend using <b>HTML, CSS, and JavaScript</b></li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <div id="projects" class="section-container non-title-container">
+    <section id="projects" class="section-container non-title-container">
         <h2 id="projects-title">Projects</h2>
         <div class="experience-box">
             <div class="projects-tab">
@@ -226,9 +227,9 @@
                     Freemarker for the frontend and webserver</li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <div id="fencing" class="section-container non-title-container">
+    <section id="fencing" class="section-container non-title-container">
         <h2 id="fencing-title">Fencing</h2>
         <div id="fencing-info" class="content">
             Below is a highlight reel from my freshman season as a sabre fencer for Brown's fencing team.
@@ -238,7 +239,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-    </div>
+    </section>
 
 </body>
 
