Centered title for mobile

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
             <a href="https://github.com/kylewreyes" target="_blank" rel="noopener noreferrer"><i
                     class="fab fa-github logos"></i></a>
         </nav>
-        <a id="arrow-box" href="#about">
-            <i id="arrow-down" class="fas fa-chevron-down"></i>
-        </a>
+        
     </section>
 
+    <a id="arrow-box" href="#about">
+        <i id="arrow-down" class="fas fa-chevron-down"></i>
+    </a>
+
+    <div id="navbar-header"><button id="navbar-button"><i id="navbar-button-logo" class="fas fa-bars"></i></button>
+    </div>
     <nav id="navbar" class="absolute">
         <a class="navbar-link" href="#home">Home</a>
         <a class="navbar-link" href="#about">About</a>
