Hopefully final attempt

--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
 
 <body>
     <section id="home" class="section-container">
-        <p class="title-page" id="intro">Hi, I'm</p>
-        <h1 class="title-page"><u>KYLE REYES</u></h1>
-        <nav id="logo-div" class="title-page">
-            <a href="kyle-reyes-resume.pdf" target="_blank" rel="noopener noreferrer"><i
-                    class="far fa-file-alt logos"></i></a>
-            <a href="mailto:kyle_reyes@brown.edu" target="_blank" rel="noopener noreferrer"><i
-                    class="far fa-envelope logos"></i></a>
-            <a href="https://linkedin.com/in/kylewreyes" target="_blank" rel="noopener noreferrer"><i
-                    class="fab fa-linkedin logos"></i></a>
-            <a href="https://github.com/kylewreyes" target="_blank" rel="noopener noreferrer"><i
-                    class="fab fa-github logos"></i></a>
-        </nav>
+        <div id="home-content">
+            <p class="title-page" id="intro">Hi, I'm</p>
+            <h1 class="title-page"><u>KYLE REYES</u></h1>
+            <nav id="logo-div" class="title-page">
+                <a href="kyle-reyes-resume.pdf" target="_blank" rel="noopener noreferrer"><i
+                        class="far fa-file-alt logos"></i></a>
+                <a href="mailto:kyle_reyes@brown.edu" target="_blank" rel="noopener noreferrer"><i
+                        class="far fa-envelope logos"></i></a>
+                <a href="https://linkedin.com/in/kylewreyes" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-linkedin logos"></i></a>
+                <a href="https://github.com/kylewreyes" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-github logos"></i></a>
+            </nav>
+        </div>
+        <a id="arrow-box" href="#about">
+            <i id="arrow-down" class="fas fa-chevron-down"></i>
+        </a>
     </section>
-
-    <a id="arrow-box" href="#about">
-        <i id="arrow-down" class="fas fa-chevron-down"></i>
-    </a>
 
     <div id="navbar-header"><button id="navbar-button"><i id="navbar-button-logo" class="fas fa-bars"></i></button>
     </div>
