--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a7195c6079.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="smoothscroll.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 
