Added transition to mobile navbar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div id="navbar-header"><button id="navbar-button"><i id="navbar-button-logo" class="fas fa-bars"></i></button>
     </div>
-    <nav id="navbar" class="absolute">
+    <nav id="navbar" class="absolute default-navbar-pos">
         <a class="navbar-link" href="#home">Home</a>
         <a class="navbar-link" href="#about">About</a>
         <a class="navbar-link" href="#education">Courses</a>
