Updated experience & resume with Summer 2021

--- a/index.html
+++ b/index.html
@@ -143,7 +143,12 @@
                 <div class="experience-right">May - Aug 2021</div>
             </div>
             <ul>
-                <li>Incoming intern in the Consumer organization</li>
+                <li>Migrated a batch job used for the Amazon Prime Rewards Visa
+                    Card to an AWS infrastructure (CDK, CloudFormation, CloudWatch, Fargate, S3, VPC, SecretsManager)
+                </li>
+                <li>Lowered cost, enhanced security, resolved potential
+                    conflicts with other batch jobs using Java and
+                    TypeScript</li>
             </ul>
         </div>
         <div class="experience-box">
@@ -220,8 +225,8 @@
                     target="_blank" rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
-                <li>Created a deep reinforcement learning agent that plays Mario Kart 64 in a group of four for Deep
-                    Learning final project
+                <li>Created a deep reinforcement learning agent that plays
+                    Mario Kart 64 in a group of four for Deep Learning final project
                 </li>
                 <li>Built TensorFlow model using convolution, A2C method, and preexisting OpenAI gym wrapper</li>
                 <li>Used <b>Docker, TensorFlow, Google Cloud Platform</b></li>
