Update w/ junior year + Summer 2022 experience

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
             <div id="about-text">
                 <p class="content">
                     I'm a student at <b>Brown University</b> concentrating in
-                    <b>Mathematics-Computer Science</b>, and I'm primarily interested in software development.
+                    <b>Mathematics-Computer Science</b>, and I'm primarily interested in software development &
+                    quantitative finance roles.
                 </p>
                 <p class="content">
-                    I've worked as an <b>Undergraduate Teaching Assistant</b> for two CS courses, and I'm also a member
-                    of
-                    Brown's fencing team. This summer, I'm working at <b>Amazon</b> as a <b>Software Development
-                        Engineer Intern</b>. Scroll through my website to find out more about
+                    This summer, I'm working at <b>Twitter</b> as an <b>Engineering Intern</b>. Scroll through my
+                    website to find out more about
                     me!
                 </p>
             </div>
@@ -74,58 +73,93 @@
             <div id="math-courses" class="course-container">
                 <p class="course-title"><b>Math courses</b></p>
                 <ul>
-                    <li>Abstract Algebra</li>
-                    <li>
-                        <a href="https://drive.google.com/file/d/1N_QVlHcnGvBbe4VmpYEil_TrJz-i19pB/view" target="_blank"
+                    <li><a href="https://cs.brown.edu/courses/csci0220/" target="_blank" rel="noopener noreferrer">
+                            CSCI 0220: Discrete Math
+                        </a></li>
+                    <li><a href="https://sites.google.com/brown.edu/apma-0350/" target="_blank"
                             rel="noopener noreferrer">
-                            Analysis: Functions of One Variable
-                        </a>
-                    </li>
-                    <li>Complex Analysis</li>
-                    <li>
-                        <a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html" target="_blank"
-                            rel="noopener noreferrer">
-                            Honors Linear Algebra
-                        </a>
-                    </li>
+                            APMA 0350: Applied ODEs
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/1U5hb_x-iHgm0heHduISXOaS_4TsxpnPE/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            APMA 1655: Honors Statistical Inference I
+                        </a></li>
                     <li><a href="http://www.math.brown.edu/dabramov/MA/f1920/35/" target="_blank"
                             rel="noopener noreferrer">
-                            Honors (Multivariable) Calculus
+                            MATH 0350: Honors Multivariable Calculus
                         </a></li>
-                    <li><a href="https://cs.brown.edu/courses/csci0220/" target="_blank" rel="noopener noreferrer">
-                            Intro to Discrete Structures and Probability
+                    <li><a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html" target="_blank"
+                            rel="noopener noreferrer">
+                            MATH 0540: Honors Linear Algebra
                         </a></li>
-                    <li>Statistical Inference I (APMA 1655)</li>
+                    <li><a href="https://drive.google.com/file/d/1N_QVlHcnGvBbe4VmpYEil_TrJz-i19pB/view" target="_blank"
+                            rel="noopener noreferrer">
+                            MATH 1010: Real Analysis I
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/1lt1F7-VwWMRygAn4EJGLny1_-McJiN9J/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            MATH 1130: Real Analysis II
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/1OBdSe0qFXT5d8gOuTFsZw3qojDoQEf4R/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            MATH 1260: Complex Analysis
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/10ZJ0eSTZuzOlrDTsPmnqbl-A46W8XUiY/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            MATH 1530: Abstract Algebra I
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/1wJwZhCDQ8t9rGfPGYlZLOLBZVB5NF3oJ/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            MATH 1540: Abstract Algebra II
+                        </a></li>
+                    <li><a href="https://drive.google.com/file/d/1iBj8TBEFuJGDEYeKljafv5LPz-uZI72G/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
+                            MATH 1580: Mathematical Cryptography
+                        </a></li>
                 </ul>
             </div>
             <div id="cs-courses" class="course-container">
                 <p class="course-title"><b>Computer Science courses</b></p>
                 <ul>
                     <li><a href="https://cs.brown.edu/courses/cs019/2019/" target="_blank" rel="noopener noreferrer">
-                            Accelerated Intro to Computer Science
+                            CSCI 0190: Accelerated Intro to CS
+                        </a>
+                    </li>
+                    <li><a href="http://cs.brown.edu/courses/cs0320/" target="_blank" rel="noopener noreferrer">
+                            CSCI 0320: Software Engineering
+                        </a></li>
+                    <li><a href="http://cs.brown.edu/courses/csci0330/" target="_blank" rel="noopener noreferrer">
+                            CSCI 0330: Computer Systems
                         </a></li>
                     <li>
                         <a href="http://cs.brown.edu/courses/csci1260/spring-2021/" target="_blank"
                             rel="noopener noreferrer">
-                            Compilers and Program Analysis
+                            CSCI 1260: Compilers
                         </a>
                     </li>
                     <li>
                         <a href="https://brown-deep-learning.github.io/dl-website-2020/" target="_blank"
                             rel="noopener noreferrer">
-                            Deep Learning
+                            CSCI 1470: Deep Learning
                         </a>
                     </li>
-                    <li><a href="https://brown-cs0330.github.io/website/index.html" target="_blank"
-                            rel="noopener noreferrer">
-                            Intro to Computer Systems
-                        </a></li>
+                    <li><a href="http://cs.brown.edu/courses/csci1650/" target="_blank" rel="noopener noreferrer">
+                            CSCI 1650: Software Security & Exploitation
+                        </a>
+                    </li>
                     <li><a href="http://cs.brown.edu/courses/cs166/" target="_blank" rel="noopener noreferrer">
-                            Intro to Computer Systems Security
-                        </a></li>
-                    <li><a href="http://cs.brown.edu/courses/cs0320/" target="_blank" rel="noopener noreferrer">
-                            Intro to Software Engineering
-                        </a></li>
+                            CSCI 1660: Computer Systems Security
+                        </a>
+                    </li>
+                    <li><a href="https://cs.brown.edu/courses/csci1680/s22/" target="_blank" rel="noopener noreferrer">
+                            CSCI 1680: Computer Networks
+                        </a>
+                    </li>
+                    </li>
+                    <li><a href="http://cs.brown.edu/courses/cs173/2021/" target="_blank" rel="noopener noreferrer">
+                            CSCI 1730: Programming Languages
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -133,6 +167,22 @@
 
     <section id="experience" class="section-container non-title-container">
         <h2 id="experience-title">Experience</h2>
+        <div class="experience-box">
+            <div class="experience-tab">
+                <div>
+                    <b><a href="https://twitter.com" target="_blank" rel="noopener noreferrer">Twitter</a></b>
+                </div>
+                <div class="experience-right">New York, NY</div>
+                <div>Engineering Intern</div>
+                <div class="experience-right">Jun - Aug 2022</div>
+            </div>
+            <ul>
+                <li>Refined search results to always suggest the account whose username matches the exact search query
+                </li>
+                <li>Improved customer experience by implementing tickets and various requests using Scala, Java, and
+                    React</li>
+            </ul>
+        </div>
         <div class="experience-box">
             <div class="experience-tab">
                 <div>
@@ -207,6 +257,37 @@
         <h2 id="projects-title">Projects</h2>
         <div class="experience-box">
             <div class="projects-tab">
+                <b>IP</b> (<a class="projects-tab-text" href="https://cs.brown.edu/courses/csci1680/s22/content/ip.pdf"
+                    target="_blank" rel="noopener noreferrer">Spec</a>) +
+                <b>TCP</b> (<a class="projects-tab-text"
+                    href="https://cs.brown.edu/courses/csci1680/s22/content/tcp.pdf" target="_blank"
+                    rel="noopener noreferrer">Spec</a>)
+            </div>
+            <ul>
+                <li>Designed an abstract link layer using UDP and implemented the IPv4 protocol in a group of two using
+                    Go</li>
+                <li>Supported routing through a modified version of RIPv2 with split horizon, poison reverse, and
+                    triggered updates</li>
+                <li>Built a TCP implementation with a state machine, sliding window protocol, and zero window probing
+                </li>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="projects-tab">
+                <b>Dropbox</b> (<a class="projects-tab-text"
+                    href="http://cs.brown.edu/courses/csci1660/files/assignments/dropbox.pdf" target="_blank"
+                    rel="noopener noreferrer">Spec</a>)
+            </div>
+            <ul>
+                <li>Designed a stateless client for a secure file sharing and storage system in a group of two using
+                    Python</li>
+                <li>Utilized provided symmetric & asymmetric encryption schemes, digital signatures, hash functions,
+                    HMACs, and
+                    random byte generators to meet security requirements</li>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="projects-tab">
                 <b>Hi, My Name is ...</b> (<a class="projects-tab-text"
                     href="https://github.com/QiuhongAnnaWei/HiMyNameIs" target="_blank"
                     rel="noopener noreferrer">GitHub</a>)
@@ -216,7 +297,7 @@
                         href="https://2021.hackatbrown.org/" target="_blank" rel="noopener noreferrer">Hack@Brown
                         2021</a></li>
                 <li>Generated names based on a given prefix, creativity level, and a similar sounding name</li>
-                <li>Used <b>HTML, CSS, JavaScript, Python, Flask</b></li>
+                <li>Used HTML, CSS, JavaScript, Python, Flask</li>
             </ul>
         </div>
         <div class="experience-box">
@@ -229,7 +310,7 @@
                     Mario Kart 64 in a group of four for Deep Learning final project
                 </li>
                 <li>Built TensorFlow model using convolution, A2C method, and preexisting OpenAI gym wrapper</li>
-                <li>Used <b>Docker, TensorFlow, Google Cloud Platform</b></li>
+                <li>Used Docker, TensorFlow, Google Cloud Platform</li>
             </ul>
         </div>
         <div class="experience-box">
@@ -245,8 +326,8 @@
                 </li>
                 <li>Given a few keywords, finds relevant paragraphs across multiple research papers (and their
                     respective locations)</li>
-                <li>Developed heuristics to filter through parsed text using <b>Java</b></li>
-                <li>Used Apache PDFBox to acquire text from the PDFs, <b>MongoDB</b> for the database, and Spark and
+                <li>Developed heuristics to filter through parsed text using Java</li>
+                <li>Used Apache PDFBox to acquire text from the PDFs, MongoDB for the database, and Spark and
                     Freemarker for the frontend and webserver</li>
             </ul>
         </div>
