--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     quantitative finance roles.
                 </p>
                 <p class="content">
-                    This summer, I'm working at <b>Twitter</b> as an <b>Engineering Intern</b>. Scroll through my
+                    Last summer, I'm working at <b>Twitter</b> as an <b>Engineering Intern</b>. Scroll through my
                     website to find out more about
                     me!
                 </p>
