Update concentration + resume

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="about-text">
                 <p class="content">
                     I'm a student at <b>Brown University</b> concentrating in
-                    <b>Mathematics-Computer Science</b>, and I'm primarily interested in software development &
+                    <b>Mathematics-Computer Science</b> and <b>Applied Mathematics</b>, and I'm primarily interested in software development &
                     quantitative finance roles.
                 </p>
                 <p class="content">
